modified:   Thesis/0-Abstract.tex 	modified:   Thesis/2-Developement.tex 	modified:   Thesis/3-Project.tex 	modified:   Thesis/4-Conclusion.tex 	new file:   Thesis/Liu_John_Master_Thesis.pdf 	modified:   Thesis/main.pdf 	modified:   Thesis/mybib.bib

--- a/ThesBack/mybib.bib
+++ b/ThesBack/mybib.bib
@@ -12,23 +12,6 @@ mendeley-groups = {TFM},
 title = {{String Theory and Particle Physics}}
 }
 
-@book{GSW1,
-author = {Green, M. B. and Schwarz, J. H. and Witten, E},
-file = {:home/jinawee/Documents/Clase/TFM/Papers/[Luis{\_}E.{\_}Ib{\'{a}}{\~{n}}ez,{\_}Angel{\_}M.{\_}Uranga]{\_}String{\_}theory{\_}(BookZZ.org).pdf:pdf},
-year = {1988},
-mendeley-groups = {TFM},
-publisher = {Cambridge University Press},
-title = {{Superstring Theory: Volume 1}}
-}
-
-@book{GSW2,
-author = {Green, M. B. and Schwarz, J. H. and Witten, E},
-file = {:home/jinawee/Documents/Clase/TFM/Papers/[Luis{\_}E.{\_}Ib{\'{a}}{\~{n}}ez,{\_}Angel{\_}M.{\_}Uranga]{\_}String{\_}theory{\_}(BookZZ.org).pdf:pdf},
-year = {1988},
-mendeley-groups = {TFM},
-publisher = {Cambridge University Press},
-title = {{Superstring Theory: Volume 2}}
-}
 
 @article{Greene1997,
 abstract = {These lectures are devoted to introducing some of the basic features of quantum geometry that have been emerging from compactified string theory over the last couple of years. The developments discussed include new geometric features of string theory which occur even at the classical level as well as those which require non-perturbative effects. These lecture notes are based on an evolving set of lectures presented at a number of schools but most closely follow a series of seven lectures given at the TASI-96 summer school on Strings, Fields and Duality.},
@@ -45,7 +28,7 @@ year = {1997}
 }
 
 
-@article{Blumenhagen1,
+@article{Blumenhagen2002,
 abstract = {We describe the general geometrical framework of brane world constructions in orientifolds of type IIA string theory with D6-branes wrapping 3-cycles in a Calabi-Yau 3-fold, and point out their immediate phenomenological relevance. These branes generically intersect in points, and the patterns of intersections govern the chiral fermion spectra and issues of gauge and supersymmetry breaking in the low energy effective gauge theory on their world volume. In particular, we provide an example of an intersecting brane world scenario on the quintic Calabi-Yau with the gauge group and the chiral spectrum of the Standard Model and discuss its properties in some detail. Additionally we explain related technical advancements in the construction of supersymmetric orientifold vacua with intersecting D-branes. Six-dimensional orientifolds of this type generalize the rather limited set of formerly known orbifolds of type I, and the presented techniques provide a short-cut to obtain their spectra. Finally, we comment on lifting configurations of intersecting D6-branes to M-theory on non-compact G{\_}2 manifolds.},
 archivePrefix = {arXiv},
 arxivId = {hep-th/0210083},
@@ -62,7 +45,7 @@ year = {2002}
 }
 
 
-@article{Blumenhagen2,
+@article{Blumenhagen2002,
 abstract = {We investigate orientifolds of type II string theory on K3 and Calabi-Yau 3-folds with intersecting D-branes wrapping special Lagrangian cycles. We determine quite generically the chiral massless spectrum in terms of topological invariants and discuss both orbifold examples and algebraic realizations in detail. Intriguingly, the developed techniques provide an elegant way to figure out the chiral sector of orientifold models without computing any explicit string partition function. As a new example we derive a non-supersymmetric Standard-like Model from an orientifold of type IIA on the quintic Calabi-Yau 3-fold with wrapped D6-branes. In the case of supersymmetric intersecting brane models on Calabi-Yau manifolds we discuss the D-term and F-term potentials, the effective gauge couplings and the Green-Schwarz mechanism. The mirror symmetric formulation of this construction is provided within type IIB theory. We finally include a short discussion about the lift of these models from type IIB on K3 to F-theory and from type IIA on Calabi-Yau 3-folds to M-theory on G{\_}2 manifolds.},
 archivePrefix = {arXiv},
 arxivId = {hep-th/0206038},
@@ -78,7 +61,7 @@ number = {07},
 pages = {026--026},
 primaryClass = {hep-th},
 title = {{Orientifolds of K3 and Calabi-Yau Manifolds with Intersecting D-branes}},
-url = {http://arxiv.org/abs/hep-th/0206038},
+url = {http://arxiv.org/abs/hep-th/0206038{\%}5Cnhttp://stacks.iop.org/1126-6708/2002/i=07/a=026?key=crossref.33c1fed04f8fac114807eaddaa52dd5b},
 volume = {2002},
 year = {2002}
 }
@@ -139,73 +122,7 @@ volume = {423},
 year = {2006}
 }
 
-@article{Becker1995,
-abstract = {Non-perturbative instanton corrections to the moduli space geometry of type IIA string theory compactified on a Calabi-Yau space are derived and found to contain order e-1/gs contributions, where gs is the string coupling. The computation reduces to a weighted sum of supersymmetric extremal maps of strings, membranes and fivebranes into the Calabi-Yau space, all three of which enter on equal footing. It is shown that a supersymmetric 3-cycle is one for which the pullback of the K?hler form vanishes and the pullback of the holomorphic three-form is a constant multiple of the volume element. Quantum mirror symmetry relates the sum in the IIA theory over supersymmetric, odd-dimensional cycles in the Calabi-Yau space to a sum in the IIB theory over supersymmetric, even-dimensional cycles in the mirror. ? 1995.},
-archivePrefix = {arXiv},
-arxivId = {hep-th/9507158},
-author = {Becker, Katrin and Becker, Melanie and Strorninger, Andrew},
-doi = {10.1016/0550-3213(95)00487-1},
-eprint = {9507158},
-file = {:home/jinawee/Documents/Clase/TFM/Papers/9507158.pdf:pdf},
-issn = {05503213},
-journal = {Nuclear Physics, Section B},
-number = {1-2},
-pages = {130--152},
-primaryClass = {hep-th},
-title = {{Fivebranes, membranes and non-perturbative string theory}},
-volume = {456},
-year = {1995}
-}
 
-
-@article{Partouche2001,
-abstract = {We consider topology-changing transitions between 7-manifolds of holonomy G{\_}2 constructed as a quotient of CY x S{\^{}}1 by an antiholomorphic involution. We classify involutions for Complete Intersection CY threefolds, focussing primarily on cases without fixed points. The ordinary conifold transition between CY threefolds descends to a transition between G{\_}2 manifolds, corresponding in the N=1 effective theory incorporating the light black hole states either to a change of branch in the scalar potential or to a Higgs mechanism. A simple example of conifold transition with a fixed nodal point is also discussed. As a spin-off, we obtain examples of G{\_}2 manifolds with the same value for the sum of Betti numbers b{\_}2+b{\_}3, and hence potential candidates for mirror manifolds.},
-archivePrefix = {arXiv},
-arxivId = {hep-th/0011130},
-author = {Partouche, Herve and Pioline, Boris},
-doi = {10.1088/1126-6708/2001/03/005},
-eprint = {0011130},
-file = {:home/jinawee/Documents/Clase/TFM/Papers/0011130.pdf:pdf},
-issn = {1029-8479},
-journal = {Journal of High Energy Physics},
-keywords = {High Energy Physics - Theory},
-number = {03},
-pages = {005--005},
-primaryClass = {hep-th},
-title = {{Rolling among G 2 vacua}},
-url = {http://arxiv.org/abs/hep-th/0011130},
-volume = {2001},
-year = {2001}
-}
-
-
-@article{McLean1996,
-journal = {Commun. Analy. Geom},
-title = {{Deformations of calibrated submanifolds}},
-author={McLean, R.C.},
-year = {1996}
-}
-
-@article{Brunner2000,
-abstract = {We study D-branes on the quintic CY by combining results from several directions: general results on holomorphic curves and vector bundles, stringy geometry and mirror symmetry, and the boundary states in Gepner models recently constructed by Recknagel and Schomerus, to begin sketching a picture of D-branes in the stringy regime. We also make first steps towards computing superpotentials on the D-brane world-volumes.},
-archivePrefix = {arXiv},
-arxivId = {hep-th/9906200},
-author = {Brunner, Ilka and Douglas, Michael R and Lawrence, Albion and R{\"{o}}melsberger, Christian},
-doi = {10.1088/1126-6708/2000/08/015},
-eprint = {9906200},
-file = {:home/jinawee/Documents/Clase/TFM/Papers/9906200.pdf:pdf},
-issn = {1029-8479},
-journal = {Journal of High Energy Physics},
-keywords = {High Energy Physics - Theory},
-mendeley-groups = {TFM},
-number = {08},
-pages = {015--015},
-primaryClass = {hep-th},
-title = {{D-branes on the quintic}},
-url = {http://arxiv.org/abs/hep-th/9906200},
-volume = {2000},
-year = {2000}
-}
 
  %\cite{McLean:1996} 
 \bibitem{McLean:1996}
