--- a/Thesis/0-Abstract.tex
+++ b/Thesis/0-Abstract.tex
@@ -1,23 +1,28 @@
 \chapter{Introduction}
 
-In order to connect String Theory with the observable world, 
-we would desire to obtain the Standard Model as its low-energy effective theory.
-Although there is still a lot of work to do before reaching this goal,
-a promising mechanism is based on Calabi-Yau orientifold compactifications of Type IIA string theory.
-Most of the work has been done on toroidal orientifold compactifications, 
-but from the perspective of model building, it is always useful to extend the compactifications backgrounds to smooth Calabi-Yau's.
-In this thesis we study a well-know Calabi-Yau manifold, Fermat's quintic and
-its potential usefulness with respect to Type IIA model building with intersecting D6-branes.
+If String Theory is destined to unify all (known) forces in our universe, its equations of motion should allow for solutions that describe our observable world. One of the goals within String Phenomenology is to obtain the Standard Model as a low-energy effective field theory from a consistent String Theory compactification. In the past three decades, a lot of work has been done to achieve this goal by exploring the various corners of the String Theory web. One of these promising corners is taken by Calabi-Yau orientifold compactifications of Type IIA string theory with intersecting D6-branes. Most of the developments in this corner resulted from toroidal orientifold compactifications. But from the perspective of D6-brane model building, it is always useful to extend the compactification backgrounds to smooth Calabi-Yau's. In this thesis we consider a well-known Calabi-Yau manifold, Fermat's quintic, and study its potential usefulness with respect to  Type IIA model building with intersecting D6-branes.
 
-The relevant properties of the quintic that we try to describe for the 
-purpose of model building are the special-Lagrangians and their deformations,
-their intersection numbers and their volumes.
-We also try to apply a similar treatment to the deformations of Fermat's quintic,
-will are less understood.
-%well studied example Fermat's quintic and try to a similar treatment of its deformations
+%In order to connect String Theory with the observable world, 
+%we would desire to obtain the Standard Model as its low-energy effective theory.
+%Although there is still a lot of work to do before reaching this goal,
+%a promising mechanism is based on Calabi-Yau orientifold compactifications of Type IIA string theory.
+%Most of the work has been done on toroidal orientifold compactifications, 
+%but from the perspective of model building, it is always useful to extend the compactifications backgrounds to smooth Calabi-Yau's.
+%In this thesis we study a well-know Calabi-Yau manifold, Fermat's quintic and
+%its potential usefulness with respect to Type IIA model building with intersecting D6-branes.
+
+The relevant objects we need to consider model building via intersecting D6-branes, are the special Lagrangian three-cycles on the quintic. Their construction alone does not suffice, as we also need to know whether these three-cycles, on which the D6-branes wrap, are rigid or can be continuously deformed. To obtain the chiral spectrum for the intersecting D6-branes, we require the topological intersection numbers between the special-Lagrangian three-cycles, while their volume encodes more physical information about the gauge group living on the D6-branes. We will study these aspects for the quintic, both at the Fermat point and away from the Fermat point through a deformation of the quintic.
+
+%The relevant properties of the quintic that we try to describe for the 
+%purpose of model building are the special-Lagrangians and their deformations,
+%their intersection numbers and their volumes.
+%We also try to apply a similar treatment to the deformations of Fermat's quintic,
+%will are less understood.
+%%well studied example Fermat's quintic and try to a similar treatment of its deformations
 
 The outline of this thesis is as follows.
-In chapter 1 we describe type IIA string theory and D6-branes in flat space, following mostly the textbook \cite{Ibanez}. 
+In chapter 1 we describe type IIA string theory and D6-branes in flat space, following mostly the textbook \cite{Ibanez} and references
+therein.. 
 In chapter 2 we review type IIA compactifications, in particular, Calabi-Yau orientifolds, with the aid of differential geometry tools.
 This chapter is based on the textbooks \cite{Ibanez}\cite{GSW1}\cite{GSW2}.
 In chapter 3 we study the quintic and its implications to model building.
