--- a/Thesis/4-Conclusion.tex
+++ b/Thesis/4-Conclusion.tex
@@ -1,12 +1,17 @@
 \chapter{Conclusion and outlook}
 
-We have seen that D$6$-branes wrapping SLags three-cycles on Fermat's quintic present a serious obstruction
-for model building, since they do allow a chiral spectrum.
-Since the intersection number is a topological quantity, it is not expected to change under deformations.
-In contrast, the volume of SLags does change, but it requires to calculate an integral which we do not 
-now how to compute analytically.  
-Thus, we have only obtained an estimate of how the volume varies under a particular deformation.
-It would be interesting to discuss how the volume is affected by other deformations.
+Having model building on mind, we have considered SUSY special lagrangian three-cycles which arise as invariant directions under the orientifold involution and determined that they  are rigid (no deformations) and can be extended beyond the Fermat point.
+Unfortunately, their intersection numbers do not generate chiral fermions, but we are working on the quintic (the simplest Calabi-Yau realised as an algebraic variety) and perhaps there are more intricate smooth Calabi-Yau background on which we can apply the techniques discussed here.
+
+
+%We have seen that D$6$-branes wrapping SLags three-cycles on Fermat's quintic present a serious obstruction
+%for model building, since they do allow a chiral spectrum.
+We are able to evaluate qualitatively the effect of a complex structure deformation on the volume of a special lagrangian three-cycle on the quintic (for small deformations).
+%Since the intersection number is a topological quantity, it is not expected to change under deformations.
+%In contrast, the volume of SLags does change, but it requires to calculate an integral which we do not 
+%now how to compute analytically.  
+%Thus, we have only obtained an estimate of how the volume varies under a particular deformation.
+It would be interesting to obtain a more precise value of the volume and to discuss how it is affected by other deformations.
 
 We encountered that deformations of the Fermat's quintic lead to singularities.
-In a specific example  we obtain a conifold singularity, but generic deformations would require a detailed study of the type of singularities, possibly in terms of du Val singularities.
+In a specific example  we obtain a conifold singularity, but generic deformations would require a detailed study of the type of singularities, possibly in terms  of singular surfaces and curves on the quintic.  
