modified:   Beamer.pdf 	modified:   Beamer.tex 	modified:   esquema.pdf

--- a/Presentation/Beamer.tex
+++ b/Presentation/Beamer.tex
@@ -153,7 +153,7 @@
       \end{equation*}
       \textcolor{red}{
     \item Propiedades topológicas permanecen invariantes: rigidez de los lagrangianos especiales, no hay intersecciones}
-    \textcolor{ao}{
+    \textcolor{orange}{
     \item El volumen depende de $\psi$. Comparamos la cota inferior del volumen dividiendo entre el volumen sin deformar}
       \begin{equation*}
         V_\psi/V \approx 1 - 0.21\psi -0.01\psi^2+O(\psi^3)
